@@ -6,7 +6,7 @@ from collections import OrderedDict
 import requests
 
 from util.calculated_provenance_metadata_store import CalculatedProvenanceMetadataStore
-from util.common import ntp_to_datestring, WriteErrorException
+from util.common import ntp_to_datestring, WriteErrorException, sort_dict
 from util.jsonresponse import NumpyJSONEncoder
 
 log = logging.getLogger(__name__)
@@ -36,6 +36,17 @@ class ProvenanceMetadataStore(object):
         return self._prov_dict
 
     def add_instrument_provenance(self, stream_key, events):
+        # reorder the JSON fields for readability
+        # The JSON spec is unordered - this ordering should not be relied upon by code!
+        keyorder = ["eventId", "editPhase", "eventName", "eventType", "referenceDesignator", "deploymentNumber",
+                    "versionNumber", "inductiveId", "assetUid", "dataSource", "lastModifiedTimestamp", "tense", 
+                    "ingestInfo", "notes", "mooring", "mooring.location.location", "node", "node.location.location", 
+                    "eventStartTime", "eventStopTime", "waterDepth", "location", "location.location", "deployedBy", 
+                    "deployCruiseInfo", "recoveredBy", "recoverCruiseInfo", "sensor", "sensor.location.location", 
+                    "sensor.calibration"]
+        for i in range(len(events)):
+            # sorted_first = False so that sensor.calibration comes after the other sensor fields
+            events[i] = sort_dict(events[i], keyorder, sorted_first=False)
         self._instrument_provenance[stream_key.as_three_part_refdes()] = events
 
     def get_instrument_provenance(self):
@@ -53,7 +64,6 @@ class ProvenanceMetadataStore(object):
         self._query_metadata['include_provenance'] = stream_request.include_provenance
         self._query_metadata['include_annotations'] = stream_request.include_annotations
         self._query_metadata['strict_range'] = stream_request.strict_range
-
 
     def get_json(self):
         out = OrderedDict()
